Managed to extract basic properties from API

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script src="js/index.js" type="module" defer></script>
   </head>
   <body>
-    <header>
-      <img src="img/pokemon.png" alt="pokemon-logo" />
-    </header>
-    <main></main>
-    <footer></footer>
+    <div class="container">
+      <header>
+        <img src="img/pokemon.png" alt="pokemon-logo" />
+      </header>
+      <main></main>
+      <footer></footer>
+    </div>
   </body>
 </html>
