Created CardComponent which extracts properties from pokemon object

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,6 @@
     <script src="js/index.js" type="module" defer></script>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <img src="img/pokemon.png" alt="pokemon-logo" />
-      </header>
-      <main></main>
-      <footer></footer>
-    </div>
+    <div class="basic-container"></div>
   </body>
 </html>
