Created basic HTML structure for card component

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <script src="js/index.js" type="module" defer></script>
   </head>
   <body>
-    <div class="basic-container"></div>
+    <div class="basic-container">
+      <ul></ul>
+    </div>
   </body>
 </html>
