--- a/public/local.html
+++ b/public/local.html
@@ -10,9 +10,11 @@
       src="https://kit.fontawesome.com/76694cac73.js"
       crossorigin="anonymous"
     ></script>
-    <script src="js/index.js" type="module" defer></script>
+    <script src="js/local.js" type="module" defer></script>
   </head>
   <body>
-    <div class="general-container"></div>
+    <div class="general-container">
+      <ul class="pokemon-list"></ul>
+    </div>
   </body>
 </html>
