--- a/public/local.html
+++ b/public/local.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/76694cac73.js"
       crossorigin="anonymous"
     ></script>
+    <script src="css/style.css"></script>
     <script src="js/local.js" type="module" defer></script>
   </head>
   <body>
