--- a/public/local.html
+++ b/public/local.html
@@ -14,8 +14,6 @@
     <script src="js/local.js" type="module" defer></script>
   </head>
   <body>
-    <div class="general-container">
-      <ul class="pokemon-list"></ul>
-    </div>
+    <div class="general-container"></div>
   </body>
 </html>
